# gesture-controlled-robot

./: .gitignore  CMakeLists.txt  README.md  TESTE_SERIAL.py  collect_stop_data.py  gesture.txt  multiServer_01.py  multiServer_02.cpp  right_model.pkl  stop_model.pkl  train_stop_model.py  web_dashboard.py
static/: style.css
templates/: index.html
